Major overhaul, game is working

--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Water Bottle Color Sorting</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="game-container">
         <div class="bottle-container">
-            <div class="bottle" id="bottle1">
-                <div class="layer" style="background-color: blue;"></div>
-                <div class="layer" style="background-color: red;"></div>
-                <div class="layer" style="background-color: yellow;"></div>
-            </div>
-            <div class="bottle empty" id="empty-bottle"></div>
         </div>
 
         <div class="controls">
-            </div>
+        </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
+
 </html>
