Add point counters and controls

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <div class="controls">
+        <div class="controls">
+            <span id="games-won">Games Won: 0</span>
+            <span id="games-played">Games Played: 0</span>
+            <button id="restart-button">Restart</button>
+          </div>
+          
+      
     <div class="game-container">
         <div class="bottle-container">
         </div>
