--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 
     <div>
         <div class="controls">
+            <div class="difficulty-selector">
+                <label for="num-bottles">Bottles:</label>
+                <select id="num-bottles">
+                  <option value="6">6</option>
+                  <option value="8">8</option>
+                  <option value="10">10</option>
+                  </select>
+                <label for="num-layers">Layers:</label>
+                <select id="num-layers">
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  </select>
+              </div>
             <table>
                 <th></th>
                 <th>Played</th>
