Add number of colors selector

--- a/index.html
+++ b/index.html
@@ -14,18 +14,30 @@
     <div>
         <div class="controls">
             <div class="difficulty-selector">
+                <div>
                 <label for="num-bottles">Bottles:</label>
                 <select id="num-bottles">
                   <option value="6">6</option>
                   <option value="8">8</option>
                   <option value="10">10</option>
                   </select>
+                </div>
+                <div>
                 <label for="num-layers">Layers:</label>
                 <select id="num-layers">
                   <option value="3">3</option>
                   <option value="4">4</option>
                   <option value="5">5</option>
                   </select>
+                </div>
+                <div>
+                  <label for="num-colors">Colors:</label>
+                <select id="num-colors">
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  </select>
+                </div>
               </div>
             <table>
                 <th></th>
