Add empty bottle selector and code format

--- a/index.html
+++ b/index.html
@@ -15,38 +15,49 @@
         <div class="controls">
             <div class="difficulty-selector">
                 <div>
-                <label for="num-bottles">Bottles:</label>
-                <select id="num-bottles">
-                  <option value="6">6</option>
-                  <option value="8">8</option>
-                  <option value="10">10</option>
-                  </select>
+                    <label for="num-bottles">Bottles:</label>
+                    <select id="num-bottles">
+                        <option value="6">6</option>
+                        <option value="8">8</option>
+                        <option value="10">10</option>
+                    </select>
                 </div>
                 <div>
-                <label for="num-layers">Layers:</label>
-                <select id="num-layers">
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  </select>
+                    <label for="num-layers">Layers:</label>
+                    <select id="num-layers">
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
                 </div>
                 <div>
-                  <label for="num-colors">Colors:</label>
-                <select id="num-colors">
-                  <option value="3">3</option>
-                  <option value="4">4</option>
-                  <option value="5">5</option>
-                  </select>
+                    <label for="num-colors">Colors:</label>
+                    <select id="num-colors">
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                    </select>
                 </div>
-              </div>
+                <div>
+                    <label for="num-empty">Empty:</label>
+                    <select id="num-empty">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
+                </div>
+            </div>
             <table>
                 <th></th>
                 <th>Played</th>
                 <th>Won</th>
                 <tr>
                     <td>Session</td>
-                    <td><div id="session-games-played" class="session-games-played">Games Played This Session: 0</div></td>
-                    <td><div id="session-games-won" class="session-games-won">Games Won This Session: 0</div></td>
+                    <td>
+                        <div id="session-games-played" class="session-games-played">Games Played This Session: 0</div>
+                    </td>
+                    <td>
+                        <div id="session-games-won" class="session-games-won">Games Won This Session: 0</div>
+                    </td>
                 </tr>
                 <tr>
                     <td>Lifetime</td>
