--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 </tr>
             </table>
             <button id="restart-button">Restart</button>
+            <button id="undo-button">Undo</button>
         </div>
 
 
