--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 <body>
 
     <div>
+        <div class="timer-container">
+            <span class="timer-display">00:00</span>
+        </div>
+        <div class="stats-container">
+            <div class="session-best-time">Session Best: --</div>
+            <div class="lifetime-best-time">Lifetime Best: --</div>
+        </div>
         <div class="controls">
             <div class="difficulty-selector">
                 <div>
