--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <td><span id="games-won">Games Won: 0</span></td>
                 </tr>
             </table>
-            <button id="restart-button">Restart</button>
+            <button id="restart-button">New<br/> game</button>
             <button id="undo-button">Undo</button>
         </div>
 
@@ -77,7 +77,11 @@
         </div>
 
         <div class="timer-container">
-            <span class="timer-display">00:00</span>
+            <div class="time-and-movements">
+                <span class="timer-display">00:00</span>
+                <div>Movements: <span id="movement-number">0</span></div>
+            </div>
+            
             <div class="best-times">
                 <div class="session-best-time">Session Best: --</div>
                 <div class="lifetime-best-time">Lifetime Best: --</div>
